# fastapi-file-upload-benchmark

./: .gitignore  README.md  client.py  flake.nix  models.py  plot_large_files.py  pyproject.toml  server.py  visualize.py
